IZPACK-1825 Refine answer handling
Signed-off-by: Patrick Reinhart <patrick@reini.net>